[project]
name = "mismatcha"
version = "0.1.1"
description = "Yes, another compare tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.urls]
Homepage = "https://github.com/s01d3t/mismatcha"

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"
